# beyond-vibes

./: .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  models.yaml  pyproject.toml
plan/: curate.md  docker-migration-plan.md  download-util.md  enhance-sim-traces.md  judge-issues.md  judge-phase-2.md  judge-phase-3.md  judge-phase-4.md  judges.md  migrate-to-openhands.md  migrate-to-pi-dev.md  simulation-organization.md  simulation-tagging-params.md  simulation_orchestrator.md  simulations.md
plan/archive/: curate.md  enhance-sim-traces.md  eval-fix-master.md  eval-fix-phase-1.md  eval-fix-phase-2.md  eval-fix-phase-3.md  judge-issues.md  judge-phase-2.md  judge-phase-3.md  judge-phase-4.md  judge-phase-5.md  judge-phase-6.md  judge-phase-7.md  judges.md  opencode.py  sandbox-isolation.md  test_opencode.py
plan/completed/: download-util.md  logger.md  migrate-to-pi-dev.md  model-config-refactor.md  pi_latency_metrics_proposal.md
scripts/: analyze_pi_timing.py  inspect_mlflow.py  test_phase1.py
src/beyond_vibes/: __init__.py  cli.py  hf.py  logger.py  model_config.py  opencode_client.py  s3.py  settings.py
src/beyond_vibes/evaluations/: __init__.py  extractor.py  judge_factory.py  judges.yaml  models.py  runner.py
src/beyond_vibes/model_downloader/: __init__.py  hf.py  models.py
src/beyond_vibes/simulations/: __init__.py  config.py  logging.py  mlflow.py  models.py  opencode.py  orchestration.py  pi_dev.py  sandbox.py
src/beyond_vibes/simulations/prompts/: __init__.py  loader.py
src/beyond_vibes/simulations/prompts/tasks/: __init__.py  e2e_test.yaml  poetry_to_uv.yaml  unit_tests.yaml
tests/: __init__.py  test_cli.py  test_config.py  test_evaluations_extractor.py  test_evaluations_models.py  test_hf.py  test_mlflow.py  test_models.py  test_opencode.py  test_orchestration.py  test_pi_dev.py  test_prompts_loader.py  test_s3.py  test_sandbox.py  test_settings.py
tests/fixtures/: pi_dev_output.jsonl  pi_dev_tool_output.jsonl
